--- a/src/App.css
+++ b/src/App.css
@@ -2,21 +2,26 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
+.HomeBoard {
+display: flex;
+border: 5px solid black;
+width: 50%;
+padding: 30px;
+justify-content: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.ForestStyle {
+  font-size: 15px;
+  border: 5px solid green;
+  padding: 10px;
+}
+
+.MountainStyle {
+  font-size: 15px;
+  border: 5px solid gray;
+  padding: 10px;
+}
+
+.FullGridStyle {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #09d3ac;
 }
