--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,8 @@
 .HomeBoard {
 display: flex;
 border: 5px solid black;
-width: 50%;
-padding: 30px;
+width: 60%;
+padding: 10px;
 justify-content: center;
 }
 
@@ -24,4 +24,19 @@ justify-content: center;
 
 .FullGridStyle {
   display: flex;
+}
+
+.PersonalSupply{
+  padding: 10px;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.FlexPersonalSupply {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  flex-direction: row;
+  align-items: center;
 }
