--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,35 @@
 .App {
   text-align: center;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+  margin: 0;
 }
 
 .HomeBoard {
 display: flex;
+flex: 1;
+flex-wrap: wrap;
 border: 5px solid black;
-width: 60%;
 padding: 10px;
+width: 90%;
 justify-content: center;
 }
 
 .ForestStyle {
   font-size: 15px;
+  flex: 1 0 auto;
+  width: 100px;
+  height: 120px;
   border: 5px solid green;
   padding: 10px;
 }
 
 .MountainStyle {
   font-size: 15px;
+  flex: 1 0 auto;
+  width: 100px;
+  height: 120px;
   border: 5px solid gray;
   padding: 10px;
 }
