--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,12 @@
   margin: 0;
 }
 
+.MainGameStyle {
+  border: 5px solid blue;
+  width: 150px;
+  height: 150px;
+}
+
 .HomeBoard {
 display: flex;
 flex: 1;
