--- a/src/App.css
+++ b/src/App.css
@@ -51,13 +51,14 @@ padding: 5px;
   display: flex;
   margin: auto;
   padding: 2px;
+  margin: 2px;
 }
 
 .PersonalSupply{
-  padding: 10px;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
+  width: 60%;
 }
 
 .FlexPersonalSupply {
@@ -66,4 +67,5 @@ padding: 5px;
   justify-content: space-between;
   flex-direction: row;
   align-items: center;
+  margin: 2px;
 }
